scr/testsuite/tests/error.err
tests/error.scr:3:syntax error, unexpected END_OF_FILE, expecting ')' or ','
[Parser] tests/error.scr:3 syntax error, unexpected END_OF_FILE, expecting ')' or ','
[Interpreter] tests/error.ycp:4 Not a term in scr file 'tests/error.scr'.
[Interpreter] tests/error.ycp:4 Couldn't mount agent to handle '.foo'
[Interpreter] tests/error.ycp:4 SCR::Read() failed
